# BudgetOnTarget

./: .gitignore  CLAUDE.md  CNAME  LICENSE  README.md  docker-compose.yml  index.html  privacy.html
.claude/commands/: deploy.md
.github/workflows/: deploy-pages.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 89009da382eb_initial_schema.py  c7a6a18d3992_add_spend_group_to_targets.py
backend/app/: config.py  database.py  main.py
backend/app/models/: __init__.py  account.py  category.py  category_rule.py  csv_import.py  household_member.py  tag.py  target.py  transaction.py
backend/app/routes/: accounts.py  budget_file.py  categories.py  category_rules.py  dashboard.py  household_members.py  imports.py  targets.py  transactions.py
backend/app/schemas/: account.py  budget_file.py  category.py  category_rule.py  csv_import.py  dashboard.py  household_member.py  target.py  transaction.py
backend/app/seed/: run.py
backend/app/services/: categorizer.py  csv_parser.py  hasher.py  importer.py  target_engine.py
backend/scripts/: validate_budget_file.py
backend/tests/: conftest.py  test_categorizer.py  test_csv_parser.py  test_importer.py  test_target_engine.py
docs/: architecture.md
frontend/: .dockerignore  Dockerfile  eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml
frontend/public/: manifest.webmanifest  sw.js
frontend/scripts/: generate-icons.mjs
frontend/src/app/: globals.css  layout.tsx
frontend/src/components/: money.tsx  (+3 more)
(+49 files in other folders)
